[package]
name = "hi"
version = "0.1.0"
authors = ["niko <nikomomo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#phf = { version = "0.8", features = ["macros"] }

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
